--- a/VGA/VGA.qsf
+++ b/VGA/VGA.qsf
@@ -71,4 +71,43 @@ set_location_assignment PIN_B7 -to R_out[3]
 set_location_assignment PIN_A7 -to R_out[2]
 set_location_assignment PIN_C9 -to R_out[1]
 set_location_assignment PIN_D9 -to R_out[0]
+set_location_assignment PIN_Y5 -to Address_OUT[17]
+set_location_assignment PIN_Y6 -to Address_OUT[16]
+set_location_assignment PIN_T7 -to Address_OUT[15]
+set_location_assignment PIN_R10 -to Address_OUT[14]
+set_location_assignment PIN_U10 -to Address_OUT[13]
+set_location_assignment PIN_Y10 -to Address_OUT[12]
+set_location_assignment PIN_T11 -to Address_OUT[11]
+set_location_assignment PIN_R11 -to Address_OUT[10]
+set_location_assignment PIN_W11 -to Address_OUT[9]
+set_location_assignment PIN_V11 -to Address_OUT[8]
+set_location_assignment PIN_AB11 -to Address_OUT[7]
+set_location_assignment PIN_AA11 -to Address_OUT[6]
+set_location_assignment PIN_AB10 -to Address_OUT[5]
+set_location_assignment PIN_AA5 -to Address_OUT[4]
+set_location_assignment PIN_AB4 -to Address_OUT[3]
+set_location_assignment PIN_AA4 -to Address_OUT[2]
+set_location_assignment PIN_AB3 -to Address_OUT[1]
+set_location_assignment PIN_AA3 -to Address_OUT[0]
+set_location_assignment PIN_AB5 -to Chip_EN
+set_location_assignment PIN_U8 -to Data_IO[15]
+set_location_assignment PIN_V8 -to Data_IO[14]
+set_location_assignment PIN_W8 -to Data_IO[13]
+set_location_assignment PIN_R9 -to Data_IO[12]
+set_location_assignment PIN_U9 -to Data_IO[11]
+set_location_assignment PIN_V9 -to Data_IO[10]
+set_location_assignment PIN_W9 -to Data_IO[9]
+set_location_assignment PIN_Y9 -to Data_IO[8]
+set_location_assignment PIN_AB9 -to Data_IO[7]
+set_location_assignment PIN_AA9 -to Data_IO[6]
+set_location_assignment PIN_AB8 -to Data_IO[5]
+set_location_assignment PIN_AA8 -to Data_IO[4]
+set_location_assignment PIN_AB7 -to Data_IO[3]
+set_location_assignment PIN_AA7 -to Data_IO[2]
+set_location_assignment PIN_AB6 -to Data_IO[1]
+set_location_assignment PIN_AA6 -to Data_IO[0]
+set_location_assignment PIN_Y7 -to LB
+set_location_assignment PIN_T8 -to Out_EN
+set_location_assignment PIN_W7 -to UB
+set_location_assignment PIN_AA10 -to Write_EN
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
